<resources>
    <string name="app_name">Đồng hồ</string>
    <string name="add_new_alarm">Add New Alarm</string>
    <string name="s_a">Sửa</string>
    <string name="b_o_th_c">Báo thức</string>
    <string name="ng_h">Đồng hồ</string>
    <string name="b_m_gi">Bấm giờ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="t_n_th_nh_ph">Tên thành phố</string>
    <string name="defaultStopWatchTime">00:00,00</string>
    <string name="Mark">ghi</string>
    <string name="reset">đặt lại</string>
    <string name="stop">tạm dừng</string>
    <string name="continueTextButton">tiếp tục</string>
    <string name="messageDeleteItem">Bạn có chắc chắn muốn xóa không</string>
    <string name="titleAlertDialog">thông báo</string>
    <string name="formatDate">EEEE, dd/MM/yyyy</string>
    <string name="notifyUserSelectedThisCity">bạn đã chọn thành phố này</string>
    <string name="repeatOneTime">chỉ một lần</string>
    <string name="bao_thuc">Báo thức</string>
    <string name="No">Không</string>
    <string name="accept">xác nhận</string>
</resources>