<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".alarm_pack.MainActivity_Alarm_Begin_Activity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_margin="20dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:id="@+id/tvEditting"
                android:text="@string/s_a"
                android:fontFamily="@font/lato_regular"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/imvSetting"
                android:src="@drawable/ic_imv_setting"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">
            <TextView
                android:id="@+id/tvMenuAlarm"
                android:text="@string/b_o_th_c"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/lato_bold"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvMenuCalendar"
                android:text="@string/ng_h"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/lato_bold"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvMenuClock"
                android:text="@string/b_m_gi"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:fontFamily="@font/lato_bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="#329be8" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvAlarm_Data"
            android:layout_marginTop="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="18dp"
        android:src="@drawable/ic_add_alarm"
        app:fabSize="normal"
        app:backgroundTint="#808080"
        android:contentDescription="@string/add_new_alarm" />
</FrameLayout>